--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "portofolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://leo-faizan.github.io/Portofolio",
+  "homepage": "https://leo-faizan.github.io/faizan",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
